--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,14 +1,18 @@
 .votes{
-    display: inline-block;
     width:10%;
     color:red;
 }
 .lang{
     color:gray;
     width:60%;
-    display: inline-block;
 }
 button{
-    display: inline-block;
     padding:3px;
+}
+.card{
+    width:270px;
+    padding:15px 20px;
+    margin:10px auto;
+    border:2px solid #158467;
+    display: flex;
 }
